# receipe-manager

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  import_tests.txt  main.py  pyproject.toml  setup.py
backend/: datamodel.py  main.py
backend/importer/: agnostic.py  bianca_zapatka.py  eat_this.py
backend/static/: Main.js  base.css
backend/templates/: home.html
backend/tests/: importer_agnostic_test.py
data/: units.json
data/receipes/: 0.json
frontend/: elm.json
frontend/src/: Api.elm  Helpers.elm  Importer.elm  Main.elm  Receipe.elm  ReceipeEditor.elm  ReceipeImageViewer.elm  ReceipeViewer.elm  Route.elm  StyledElements.elm
frontend/tests/: TestHelpers.elm  TestJson.elm
importer/: eat_this.py
static/css/: base.css
templates/: base.html  edit_receipe.html  home.html  receipe.html
