[project]
name = "receipe-manager-backend"
description = """Backend for the python/elm based receipe-manager"""
authors = [
    { name = "Mathias Graf", email = "mathias.n.graf@gmail.com" }, 
]
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "pyserde==0.10.5",
    "flask==2.3.2",
    "pytest==7.3.2",
]

[tool.black]
line_length = 88

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "B", "C4", "PIE", "SIM", "TID", "ARG", "ERA", "TRY", "NPY", "RUF", "PT", "PLE", "EM", "PLW", "TCH"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
